@@ -1,6 +1,14 @@
 # Generated by roxygen2: do not edit by hand
 
+S3method("$",enrichResult)
+S3method("$",gseaResult)
+S3method("[",enrichResult)
+S3method("[",gseaResult)
+S3method("[[",enrichResult)
+S3method("[[",gseaResult)
 S3method(barplot,enrichResult)
+S3method(dim,enrichResult)
+S3method(dim,gseaResult)
 S3method(fortify,enrichResult)
 S3method(fortify,gseaResult)
 S3method(head,enrichResult)
@@ -32,9 +40,6 @@ export(theme_dose)
 export(upsetplot)
 exportClasses(enrichResult)
 exportClasses(gseaResult)
-exportMethods("$")
-exportMethods("[")
-exportMethods("[[")
 exportMethods(cnetplot)
 exportMethods(dotplot)
 exportMethods(plot)
