@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/enrichResult.R
+% Please edit documentation in R/00-AllClasses.R
 \docType{class}
 \name{enrichResult-class}
 \alias{enrichResult-class}
